Stylesheet/emote/tag updates 2013-07-16

--- a/source-css/babsquisition.css
+++ b/source-css/babsquisition.css
@@ -557,6 +557,24 @@ a[href|="/conan"] {
  background-image:url(%%conan%%)
 }
   
+a[href|="/babssing"], a[href|="/babsing"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 143px;
+ height: 225px;
+ background-image:url(%%babsing%%)
+}
+  
+a[href|="/babscute"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 223px;
+ height: 184px;
+ background-image:url(%%babscute%%)
+}
+  
 
 /*  Colors to know:  
     #eadb64 - Tabmenu background  
