--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -36,7 +36,11 @@ a[href|="/nightmarebon"]{display:block;clear:none;float:left;width:200px;height:
 a[href|="/paperbon"]{display:block;clear:none;float:left;width:145px;height:150px;background-image:url(%%paperbon%%)}
 a[href|="/rastabon"]{display:block;clear:none;float:left;width:102px;height:150px;background-image:url(%%rastabon%%)}
 a[href|="/xmasbon"]{display:block;clear:none;float:left;width:120px;height:120px;background-image:url(%%xmasbon%%)}
-a[href|="/sweetiehugs"]{display:block;clear:none;float:left;width:171px;height:200px;background-image:url(%%sweetiehugs%%)}
+a[href|="/sweetiehugs"]{display:block;clear:none;float:left;width:174px;height:200px;background-image:url(%%sweetiehugs%%)}
+a[href|="/myosotis"]{display:block;clear:none;float:left;width:180px;height:143px;background-image:url(%%myosotis%%)}
+a[href|="/sweetierarityhug"]{display:block;clear:none;float:left;width:192px;height:200px;background-image:url(%%sweetierarityhug%%)}
+a[href|="/raritysweetiehug"]{display:block;clear:none;float:left;width:220px;height:250px;background-image:url(%%raritysweetiehug%%)}
+a[href|="/alwaysthinkinofyou"]{display:block;clear:none;float:left;width:171px;height:220px;background-image:url(%%alwaysthinkinofyou%%)}
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
