--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -399,13 +399,13 @@ a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70p
 a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
-a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"]
+a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"], a[href|="/glimmerplotting"], a[href|="/glimmersqueeze"], a[href|="/glimmerwink"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em6-v03%%);
+background-image: url(%%foe-em6-v04%%);
 }
 a[href|="/bjdrunk"]{background-position: 0 0; width: 119px; height: 77px; }
 a[href|="/bjpounce"]{ background-position: 0 -127px; width: 150px; height: 79px; }
@@ -417,7 +417,10 @@ a[href|="/velvetfilly"]{ background-position: 0 -938px; width: 91px; height: 130
 a[href|="/glimmergrin"]{ background-position: 0 -1118px; width: 52px; height: 100px; } 
 a[href|="/murkybsod"]{ background-position: 0 -1268px; width: 84px; height: 100px; } 
 a[href|="/murkyhappy"]{ background-position: 0 -1418px; width: 81px; height: 100px; } 
-a[href|="/murkyplease"]{ background-position: 0 -1568px; width: 150px; height: 121px; } 
+a[href|="/murkyplease"]{ background-position: 0 -1568px; width: 150px; height: 121px; }
+a[href|="/glimmerplotting"]{ background-position: 0 -1739px; width: 61px; height: 100px; }
+a[href|="/glimmersqueeze"]{ background-position: 0 -1889px; width: 150px; height: 141px; }
+a[href|="/glimmerwink"]{ background-position: -200px 0; width: 55px; height: 100px; }
 
 
 a[href|="/advicebj"]
