--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1178,7 +1178,8 @@ a[href|="/indignantluna"],
 a[href|="/fascinating"],
 a[href|="/honesty"],
 a[href|="/howyoudoin"],
-a[href|="/literallybrohoof"]
+a[href|="/literallybrohoof"],
+a[href|="/abhowyoudoin"]
 {
     display: block;
     clear: none;
@@ -1276,6 +1277,11 @@ a[href|="/literallybrohoof"]
 {
 	width: 348px;
 	background-position: -0px -700px;
+}
+a[href|="/abhowyoudoin"]
+{
+	width: 171px;
+	background-position: -348px -700px;
 }
 /* end sheet 8 */
 
@@ -1822,7 +1828,9 @@ a[href|="/lyrafonz"],
 a[href|="/rdtrain"],
 a[href|="/trainbowdash"],
 a[href|="/fsstare"],
-a[href|="/rdthebird"]
+a[href|="/rdthebird"],
+a[href|="/ithappened"],
+a[href|="/bpliver"]
 {
     display: block;
     clear: none;
@@ -1875,5 +1883,11 @@ a[href|="/rdthebird"]
 {
 	width: 115px;
 	background-position: -137px -560px;
+}
+a[href|="/ithappened"],
+a[href|="/bpliver"]
+{
+	width: 252px;
+	background-position: -0px -700px;
 }
 /* end sheet 14*/
