--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -69,7 +69,7 @@ a[href|='/woonadance'] { width:130px; height:106px; background-image: url(%%woon
 a[href|='/sbfrown'] { width:154px; height:200px; background-image: url(%%sbfrown%%); display: block; clear: none; float: left}
 
 a[href|='/scootascared'] { width:100px; height:100px; background-image: url(%%scootascared%%); display: block; clear: none; float: left}
-a[href|='/today'] { width:150px; height:131px; background-image: url(%%scootawoo%%); display: block; clear: none; float: left}
+a[href|='/scootawoo'] { width:150px; height:131px; background-image: url(%%scootawoo%%); display: block; clear: none; float: left}
 
 a[href|='/today'] { width:500px; height:270px; background-image: url(%%today%%); display: block; clear: none; float: left}
 
