--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -434,7 +434,7 @@ a[href|="/trixnazi"] {
     }
 
 /***********MLP-XLRG*************/
-a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"], a[href|="/sstrixie"], a[href|="/lunanazi"] {
+a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"], a[href|="/sstrixie"], a[href|="/lunanazi"], a[href|="/dalekstare"], a[href|="/daleksmile"] {
      display: block;
      clear: none;
      float: left;
@@ -479,6 +479,16 @@ a[href|="/lunanazi"] {
      background-position: -1178px -0px;
      width: 237px;
      height: 200px;
+     }
+a[href|="/dalekstare"] {
+     background-position: -1415px -0px;
+     width: 69px;
+     height: 68px;
+     }
+a[href|="/daleksmile"] {
+     background-position: -1484px -0px;
+     width: 230px;
+     height: 168px;
      }
 
 /***********Huge Emotes***********/
@@ -621,7 +631,6 @@ a[href|="/plunawait"] {
     background-position: -2030px -0px
     }
 END-PONYSCRIPT-IGNORE { color: red; }
-
 
 
 
