--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -222,15 +222,6 @@ a[href|="/rarrifle"] {
   height: 267px;
 }
 
-a[href|="/applecorn"] {
-  background-image: url(%%applecorn%%);
-  display:block;
-  clear:none;
-  float:left;
-  width:150px;
-  height:112px;
-}
-
 a[href|="/aliloo"] {
   background-image: url(%%aliloo%%);
   display:block;
@@ -265,6 +256,16 @@ a[href|="/gabepony"] {
   float:left;
   width:132px;
   height:150px;
+}
+
+a[href|="/applecorn"] {
+  background-image: url(%%applecorn%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  
+  
 }
 
 a[href|="/foreheadkiss"] {
@@ -499,4 +500,49 @@ a[href|="/smfds"] {
   float:left;
   width:183px;
   height:150px;
+}
+
+a[href|="/spitsock"] {
+  background-image: url(%%spitsocks%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:160px;
+  height:150px;
+}
+
+a[href|="/scaredtavi"] {
+  background-image: url(%%scaredtavi%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:173px;
+  height:150px;
+}
+
+a[href|="/cozyvinyl"] {
+  background-image: url(%%cozyvinyl%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:119px;
+  height:151px;
+}
+
+a[href|="/djhug"] {
+  background-image: url(%%djhug%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:328px;
+  height:200px;
+}
+
+a[href|="/djcuddles"] {
+  background-image: url(%%djcuddles%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  height:118px;
 }
