--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -446,3 +446,104 @@ a[href|="/elementofclass"] {
  background-image: url(%%spritesheet3%%);
  background-position: -237px -300px;  
 } 
+
+a[href|="/raritavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -750px;
+} 
+
+a[href|="/lyracantmusic"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 164px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -194px -600px;
+} 
+
+a[href|="/octadash"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 194px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -600px;
+} 
+
+
+a[href|="/drunktavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -450px;
+} 
+
+a[href|="/tavibra"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 270px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -900px;
+} 
+
+
+/*
+
+a[href|="/raritavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 150px;
+ background-image: url(%%raritavi%%);
+} 
+
+a[href|="/lyracantmusic"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 164px;
+ height: 150px;
+ background-image: url(%%lyracantmusic%%);
+} 
+
+a[href|="/octadash"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 194px;
+ height: 150px;
+ background-image: url(%%octydash%%);
+} 
+
+a[href|="/drunktavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%drunktavia%%);
+} 
+
+a[href|="/tavibra"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 230px;
+ height: 150px;
+ background-image: url(%%tavibra%%);
+} 
+
+*/
