--- a/source-css/thepleasurehub.css
+++ b/source-css/thepleasurehub.css
@@ -1,5 +1,4 @@
 
-
 div.titlebox span.word {
     display: none;
     }
@@ -467,5 +466,71 @@ a[href|="/yellingarmor"]{
     width:153px;
     height:150px;
     background-position: -0px -600px !important;
+
+}
+
+a[href|="/sadpinkpone"], a[href|="/gettingonmynerves"], a[href|="/pdexited"], a[href|="/pdpull"], a[href|="/uwotm8"],
+a[href|="/pdgame"], a[href|="/earassault"], a[href|="/pdkiss"]{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%pdemotes%%)
+
+}
+
+a[href|="/sadpinkpone"]{
+    width:233px;
+    height:200px;
+    background-position: -0px -0px !important;
+
+}
+
+a[href|="/gettingonmynerves"]{
+    width:231px;
+    height:200px;
+    background-position: -0px -200px !important;
+
+}
+
+a[href|="/pdexited"]{
+    width:284px;
+    height:200px;
+    background-position: -0px -400px !important;
+
+}
+
+a[href|="/pdpull"]{
+    width:356px;
+    height:200px;
+    background-position: -0px -600px !important;
+
+}
+
+a[href|="/uwotm8"]{
+    width:356px;
+    height:200px;
+    background-position: -0px -800px !important;
+
+}
+
+a[href|="/pdgame"]{
+    width:320px;
+    height:200px;
+    background-position: -0px -1000px !important;
+
+}
+
+a[href|="/earassault"]{
+    width:354px;
+    height:200px;
+    background-position: -0px -1200px !important;
+
+}
+
+a[href|="/pdkiss"]{
+    width:361px;
+    height:200px;
+    background-position: -0px -1400px !important;
 
 }
