--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -45,8 +45,8 @@ div.titlebox span.number:after {
 
 /* Header */
 #header {
-    background-color: #ade0b9;
-    background-image: url(%%frostbitebg%%);
+    background-color: #9cd7f3; 
+    background-image: url(%%rainboom-small3%%);
     background-repeat:repeat-x;
     border-bottom: 1px solid #000;
     height: 147px;
@@ -680,13 +680,13 @@ a[href="/freakout"]:hover:after {
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%compcube%%) no-repeat scroll 1px 1px #fff;
-    border: 3px solid #761880;
+    background: url(%%portalsign%%) no-repeat scroll 1px 1px #fff;
+    border: 1px solid #F2622A;
     position: absolute;
-    top: 10px;
-    left: 158px;
+    top: 5px;
+    left: 120px;
     margin: 60px 410px 0px 0px;
-    padding: 30px 4px 5px 60px;
+    padding: 31px 7px 3px 60px;
     list-style: none;
     display: block;
     white-space: normal;
