--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -283,12 +283,12 @@ background-color: white;
 /*New post spam filtered warning*/
 #title-field.roundfield:before
 {
- content:"NOTE: Please direct discussion about Equestria Girls to the official discussion thread located in the sidebar.";
+ content:"NOTE: Check the new queue after posting. If your post doesn't show up, you were spam filtered by mistake! Message the moderators with a link to the submission.";
  font-size:0.86em;
  padding:5px;
  border:1px solid #5f99cf;
  background-color:#EFF7FF;
- color:red;
+ color:black;
  font-weight:bold;
  display:block;
  margin-bottom:10px
