Stylesheet/emote/tag updates 2013-07-23

--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -21,11 +21,11 @@ Use Ctrl-F to find and remove them. */
     }
 
 .titlebox .number:after {
-    content: " juicebitches"
+    content: " Space Stallions"
     }
 
 div.titlebox .users-online span.number:after {
-    content: " stretching glutes"
+    content: " Stretching Glutes"
     }
 
 /*------------------------ Changes background -------------------------------*/
