--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -16,7 +16,8 @@ body {
 
 /* Sidebar */
 div.side {
-    background: none
+    background: #fcfcfc;
+    margin-left: 10px;
     }
 div.sidebox.submit div.morelink div.nub {
     background: none
@@ -45,7 +46,7 @@ div.titlebox span.number:after {
 
 /* Header */
 #header {
-    background-color: #9cd7f3; 
+    background-color: #cee3f8; 
     background-image: url(%%rainboom-small3%%);
     background-repeat:repeat-x;
     border-bottom: 1px solid #000;
