--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -46,7 +46,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  .sidebox.create .morelink {display: none;}
 
 body {
-    background: url('%%lunabg3%%') no-repeat fixed bottom center !important;
+    background: url('%%padbgfinal2%%') no-repeat fixed right bottom !important;
     background-color:#ffffff !important;
 } 
 
