--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -264,7 +264,7 @@ a[href|="/applecorn"] {
   clear:none;
   float:left;
   width:150px;
-  
+  height:112px;
   
 }
 
@@ -520,22 +520,13 @@ a[href|="/scaredtavi"] {
   height:150px;
 }
 
-a[href|="/cozyvinyl"] {
-  background-image: url(%%cozyvinyl%%);
-  display:block;
-  clear:none;
-  float:left;
-  width:119px;
-  height:151px;
-}
-
 a[href|="/djhug"] {
   background-image: url(%%djhug%%);
   display:block;
   clear:none;
   float:left;
-  width:328px;
-  height:200px;
+  width:259px;
+  height:158px;
 }
 
 a[href|="/djcuddles"] {
@@ -545,4 +536,67 @@ a[href|="/djcuddles"] {
   float:left;
   width:150px;
   height:118px;
+}
+
+a[href|="/vinylcozy"] {
+  background-image: url(%%cozyvinyl2%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:152px;
+  height:192px;
+}
+
+a[href|="/trixiecorn"] {
+  background-image: url(%%trixiecorn%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:176px;
+  height:200px;
+}
+
+a[href|="/pgilda"] {
+  background-image: url(%%PwincessGilda%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  height:150px;
+}
+
+a[href|="/timeprince"] {
+  background-image: url(%%timeprince%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  height:200px;
+}
+
+a[href|="/whoovesonwhooves"] {
+  background-image: url(%%whoovesonwhooves%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:93px;
+  height:150px;
+}
+
+a[href|="/cutevinyl"] {
+  background-image: url(%%fillyvinyl%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  height:150px;
+}
+
+a[href|="/tulpa"] {
+  background-image: url(%%tulpa%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:200px;
+  height:150px;
 }
